@@ -5,6 +5,8 @@ import com.personoid.humanoid.utils.GenericMaterial;
 import com.personoid.humanoid.utils.Layer;
 import com.personoid.humanoid.utils.StructureReference;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public enum StructureType {
@@ -35,13 +37,13 @@ public enum StructureType {
 
     private static StructureReference getReference(String type) {
         switch (type) {
-            case "tree" -> { // define the shape of a tree
+            case "tree": { // define the shape of a tree
                 // any log, at least 1 block wide and 4 blocks tall
-                Layer logLayer = new Layer(List.of(new GenericMaterial("log")), new Bounds(1, 4));
+                Layer logLayer = new Layer(Collections.singletonList(new GenericMaterial("log")), new Bounds(1, 4));
                 // any leaves, no minimum bounds (due to connecting trees)
-                Layer leavesLayer = new Layer(List.of(new GenericMaterial("leaves")));
+                Layer leavesLayer = new Layer(Collections.singletonList(new GenericMaterial("leaves")));
                 // combine the layers (bottom -> top)
-                List<Layer> layers = List.of(logLayer, leavesLayer);
+                List<Layer> layers = Arrays.asList(logLayer, leavesLayer);
                 // create a reference from the layersw
                 return new StructureReference("tree", new Bounds(6, 7), layers);
             }
